# adaptive-subdivision

./: CMakeLists.txt  README.md
Data/: bunny_999.off  dragon_1000.off
cmake/: .CGAL.cmake.swp  CGAL.cmake  FindCGAL.cmake  FindEigen3.cmake  GLUT.cmake  OpenGL.cmake
src/: Base.hpp  Loop.cpp  Loop.hpp  Mathematics.hpp  Shader.cpp  Shader.hpp  Sqrt_3.cpp  Sqrt_3.hpp  Window.cpp  Window.hpp  main.cpp
